examples/type_system/failing/75_hm_if_non_bool_condition_compile_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/75_hm_if_non_bool_condition_compile_mismatch.flx
// error[E300]: Type Mismatch
//
// I found a type mismatch.
//
//   examples/type_system/failing/75_hm_if_non_bool_condition_compile_mismatch.flx:29:8
//    |
// 29 |     if 1 {
//    |        ^
//    |        - this expression has type `Int`
//
//    |        - if condition is known at compile time
//
// Note:
//   expected type: Bool
//   found type: Int
//
// Help:
//   Booleans are not numeric in Flux. Use `true` or `false` here.
//   use a Bool expression, or make the condition/guard explicitly boolean
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

fn pick() -> Int {
    if 1 {
        10
    } else {
        20
    }
}

fn main() -> Unit with IO {
    print(to_string(pick()))
}
